# helium-optee-rs

./: .gitignore  Cargo.toml  build.rs
c_src/: helium.c  helium.h  helium_optee_ta.h
src/: lib.rs
